--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <div class="section no-pad-bot">
       <div class="container">
         <br><br>
-        <h1 class="header center black-text">Karolina Woźniczka - Psycholog sportowy</h1>
+        <h1 class="header center teal-text text-lighten-2">Karolina Woźniczka</h1>
         <div class="row center">
-          <h5 class="header col s12 black-text">A modern responsive front-end framework based on Material Design</h5>
+          <h5 class="header col s12 light">Psycholog sportowy</h5>
         </div>
         <div class="row center">
           <a href="http://materializecss.com/getting-started.html" id="download-button" class="btn-large waves-effect waves-light teal lighten-1">Get Started</a>
