--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Parallax Template - Materialize</title>
+  <title>Karolina Woźniczka - Psycholog sportowy</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -54,7 +54,8 @@
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
             <h5 class="center">Speeds up development</h5>
 
-            <p class="light">We did most of the heavy lifting for you to provide a default stylings that incorporate our custom components. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Witajcie, nazywam się Karolina Woźniczka, mistrzynią Polski w narciarstwie, okazjonalnie jeżdzę na rowerze,
+			pływam na kitesurfingu i chodzę z psem na spacery, a poza tym to mam bardzo ładne oczy. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
           </div>
         </div>
 
