--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@
         <div class="col s12 m4">
           <div class="icon-block">
             <h2 class="center brown-text"><i class="material-icons">flash_on</i></h2>
-            <h5 class="center">Speeds up development</h5>
+            <h5 class="center">O mnie</h5>
 
-            <p class="light">Witajcie, nazywam się Karolina Woźniczka, mistrzynią Polski w narciarstwie, okazjonalnie jeżdzę na rowerze,
-			pływam na kitesurfingu i chodzę z psem na spacery, a poza tym to mam bardzo ładne oczy. Additionally, we refined animations and transitions to provide a smoother experience for developers.</p>
+            <p class="light">Witajcie, nazywam się Karolina Woźniczka, mistrzyni Polski w narciarstwie, okazjonalnie jeżdzę na rowerze,
+			pływam na kitesurfingu i chodzę z psem na spacery, a poza tym to mam bardzo, bardzo ładne oczy.</p>
           </div>
         </div>
 
